--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<a href="https://www.amazon.fr/">amazon</a>
       </div>
       <div>
-  	   <a href="seloger.com/">se loger</a>
+  	   <a href="https://www.seloger.com/">se loger</a>
       </div>
 </div>
 
