--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   	   	<a href="https://www.youtube.com/">youtube</a>
       </div>
       <div>
-  	   	<a href="https://twitter.com">twitter</a>
+  	   	<a href="https://bsky.app/">bluesky</a>
       </div>
       <div>
   	   	<a href="https://www.leboncoin.fr/">le bon coin</a>
